--- a/weather.css
+++ b/weather.css
@@ -1,14 +1,14 @@
 .temp{
-    height: 200px;
-    width: 300px;
+    height: 150px;
+    width: 200px;
     background-color: black;
     margin: auto;
-    opacity: 0.3;
+    opacity: 0.7;
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .temp2{
-    font-size:1000%;
+    font-size: 120px;
     color: beige;
     
 }
@@ -16,12 +16,30 @@
  margin-top: 40px;
     background-color: antiquewhite;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+    padding: 30px;
 }
 #b{
     width: 150px;
     height: 100px;
     background-color: black;
     border-radius: 20px;
-    margin: auto;
-    opacity: 0.3;
+    margin:auto;
+    opacity: 0.7;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);padding: 5px;
 }
+.location{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: row;
+}
+p{
+    color: blanchedalmond;
+   
+    padding: 15px;
+}
+input{
+    width: 50%;
+}
+
