--- a/weather.css
+++ b/weather.css
@@ -3,7 +3,7 @@
     width: 200px;
     background-color: black;
     margin: auto;
-    opacity: 0.7;
+    
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -13,10 +13,11 @@
     
 }
 .container{
+    position:relative;
  margin-top: 40px;
-    background-color: antiquewhite;
+    background-color: rgba(250, 235, 215, 0.589);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
+
     padding: 30px;
 }
 #b{
@@ -25,8 +26,9 @@
     background-color: black;
     border-radius: 20px;
     margin:auto;
-    opacity: 0.7;
+   
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);padding: 5px;
+    margin-bottom: 20px;
 }
 .location{
     display: flex;
@@ -42,4 +44,13 @@ p{
 input{
     width: 50%;
 }
-
+img {
+   width: 100%;
+    object-fit: contain;
+  }
+  body{
+    background-image: url(./image/noaa-ZVhm6rEKEX8-unsplash.jpg);
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center;   
+  }
