--- a/weather.css
+++ b/weather.css
@@ -32,9 +32,9 @@
 }
 .location{
     display: flex;
-    text-align: center;
-    justify-content: center;
-    flex-direction: row;
+   justify-content: center;
+   align-items: center;
+    
 }
 p{
     color: blanchedalmond;
