--- a/weather.css
+++ b/weather.css
@@ -14,7 +14,7 @@
 }
 .container{
     position:relative;
- margin-top: 40px;
+ margin-top: 5%;
     background-color: rgba(250, 235, 215, 0.589);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -48,9 +48,23 @@ img {
    width: 100%;
     object-fit: contain;
   }
-  body{
-    background-image: url(./image/noaa-ZVhm6rEKEX8-unsplash.jpg);
-    background-size:     cover;                      /* <------ */
-    background-repeat:   no-repeat;
-    background-position: center center;   
+  video {
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  
   }
+  /* .video-wrapper {
+    
+    width: 100%;
+   height:100%;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } */
