--- a/weather.css
+++ b/weather.css
@@ -1,20 +1,21 @@
 .temp{
-    height: 150px;
-    width: 200px;
-    background-color: black;
+    height: 100px;
+    width: 170px;
+    background-color: rgba(0, 0, 0, 0.363);
     margin: auto;
     
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .temp2{
-    font-size: 120px;
+    font-size: 70px;
     color: beige;
     
 }
 .container{
     position:relative;
  margin-top: 5%;
+ height:500px;
     
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -23,7 +24,7 @@
 #b{
     width: 150px;
     height: 100px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.39);
     border-radius: 20px;
     margin:auto;
    
@@ -41,8 +42,12 @@ p{
    
     padding: 15px;
 }
-input{
+#pl{
     width: 50%;
+    background-color: rgba(251, 252, 253, 0.322);
+    color:white;
+    font-weight: bolder;
+    margin: auto;
 }
 
   video {
@@ -52,6 +57,18 @@ input{
     left: 0;
     height: 100%;
     width: 100%;
+    z-index: -1;
   
   }
+  body{
+    background-color: blue;
+    font-family: sans-serif;
+  }
+  #bt{
+    display: flex;
+    justify-content: center;
+  }
+ 
+  
+ 
  
