--- a/weather.css
+++ b/weather.css
@@ -50,12 +50,14 @@ p{
 }
 
   video {
+    width: 100vw;
+    height: 100vh;
     object-fit: cover;
-    position: absolute;
-    top: 0;
+    position: fixed;
     left: 0;
-    height: 100%;
-    width: 100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
     z-index: -1;
   
   }
@@ -67,7 +69,7 @@ p{
     display: flex;
     justify-content: center;
   }
- 
+
   
  
  
